# HelloTriangle

./: .gitignore  CMakeLists.txt  main.cpp
shaders/: compileShaders.sh
